--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -361,11 +361,27 @@
 {% block jsscripts %}
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-  <div class="scroll-top visible-xs visble-sm">
+  <div class="scroll-top visible-xs visble-sm" style="bottom:95px; width:100%">
     <!-- <a class="btn btn-primary" href="#page-top">
       <i class="fa fa-chevron-up"></i>
     </a> -->
-    <input id="toggle-title_abstract" type="checkbox" data-toggle="toggle" data-on="Titles" data-off="Abstracts">
+    <!-- <input id="toggle-title_abstract" type="checkbox" data-toggle="toggle" data-on="Titles" data-off="Abstracts"> -->
+    <div class="" style="background-color:rgba(255,255,255,0.0);">
+      <div class="archive_filter" style="">
+        <ul>
+          <li>
+              <p id="button_titles">
+              Titles only
+              </p>
+          </li>
+          <li>
+              <p id="button_images">
+                Abstracts/images
+              </p>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 <script src="/static/js/jquery.js"></script>
 <script src="/static/js/jquery.easing.min.js"></script>
@@ -374,14 +390,6 @@
 
 <!-- TEST: bootstrap toggle -->
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-<script>
-  // $(function() {
-  //   $('#toggle-title_abstract').change(function() {
-  //     $('#console-event').html('Toggle: ' + $(this).prop('checked'))
-  //     console.log($(this).prop('checked'));
-  //   })
-  // })
-</script>
 
 </body>
 {% endblock %}
