archive mobile: filter stuff

--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -376,7 +376,7 @@
           </li>
           <li>
               <p id="button_images">
-                Abstracts/images
+                Titles with abstracts
               </p>
           </li>
         </ul>
