archive mobile filter: cleaned up stuff a bit

--- a/app/static/css/archive_page.css
+++ b/app/static/css/archive_page.css
@@ -269,6 +269,11 @@ footer .footer-info{
   border-radius: 0px;
   opacity: 0.9;
 }
+.scroll-top{
+  bottom:95px;
+  width:100%;
+  right: 0px;
+}
 .toggle-off.btn{
   padding-left:34px;
   background-color: white;
@@ -283,4 +288,8 @@ footer .footer-info{
 }
 .btn-default:hover{
   background-color: #ffc21c;
+}
+
+.mobile_filter_wrapper{
+  background-color:rgba(255,255,255,0.0);
 }
