--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -361,13 +361,13 @@
 {% block jsscripts %}
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-  <div class="scroll-top visible-xs visble-sm" style="bottom:95px; width:100%">
+  <div class="scroll-top visible-xs visble-sm">
     <!-- <a class="btn btn-primary" href="#page-top">
       <i class="fa fa-chevron-up"></i>
     </a> -->
     <!-- <input id="toggle-title_abstract" type="checkbox" data-toggle="toggle" data-on="Titles" data-off="Abstracts"> -->
-    <div class="" style="background-color:rgba(255,255,255,0.0);">
-      <div class="archive_filter" style="">
+    <div class="mobile_filter_wrapper">
+      <div class="archive_filter">
         <ul>
           <li>
               <p id="button_titles">
